finish howto, fix help precedence bug, fix doc8 linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,8 +116,9 @@ exclude = [
 ]
 
 
+# todo doc8 configuration here is not being picked up and doesnt seem to be working
+# as expected - for now pass these parameters manually
 [tool.doc8]
-ignore-path = "doc/_build"
 max-line-length = 100
 sphinx = true
 
