--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -42,7 +42,8 @@ jobs:
           poetry run black django_typer --check
           poetry run pylint django_typer
           poetry run mypy django_typer
-          poetry run doc8 -q doc
           poetry check
           poetry run pip check
           poetry run python -m readme_renderer ./README.rst -o /tmp/README.html
+          cd ./doc
+          poetry run doc8 --ignore-path build --max-line-length 100
