--- a/doc/.readthedocs.yaml
+++ b/doc/.readthedocs.yaml
@@ -20,3 +20,7 @@ build:
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: doc/source/conf.py
+   
+# Optionally build your docs in additional formats such as PDF and ePub
+formats:
+  - pdf
