--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -39,6 +39,7 @@ jobs:
           poetry run pip install -U "${{ matrix.django-version }}"
       - name: Run Static Analysis
         run: |
+          poetry run isort django_typer --check
           poetry run black django_typer --check
           poetry run pylint django_typer
           poetry run mypy django_typer
