--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,7 +25,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-
+      - name: Run pyright
+        uses: jakebailey/pyright-action@v2
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -43,6 +44,7 @@ jobs:
           poetry run black django_typer --check
           poetry run pylint django_typer
           poetry run mypy django_typer
+          pyright django_typer
           poetry check
           poetry run pip check
           poetry run python -m readme_renderer ./README.rst -o /tmp/README.html
