--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,15 +9,24 @@ jobs:
     strategy:
       matrix:
         # run static analysis on bleeding and trailing edges
-        python-version: [ '3.8', '3.12' ]
+        python-version: [ '3.8', '3.10', '3.12' ]
         django-version:
-          - 'Django~=3.2.0' # LTS April 2024
-          - 'Django~=4.2.0' # LTS April 2026
+          - '3.2' # LTS April 2024
+          - '4.2' # LTS April 2026
+          - '5.0' # April 2025
         exclude:
           - python-version: '3.8'
-            django-version: 'Django~=4.2.0'
+            django-version: '4.2'
           - python-version: '3.12'
-            django-version: 'Django~=3.2.0'
+            django-version: '4.2'
+          - python-version: '3.12'
+            django-version: '3.2'
+          - python-version: '3.10'
+            django-version: '3.2'
+          - python-version: '3.8'
+            django-version: '5.0'
+          - python-version: '3.10'
+            django-version: '5.0'
 
     steps:
       - uses: actions/checkout@v4
@@ -35,7 +44,7 @@ jobs:
           poetry config virtualenvs.in-project true
           poetry run pip install --upgrade pip
           poetry install
-          poetry run pip install -U "${{ matrix.django-version }}"
+          poetry run pip install -U "django~=${{ matrix.django-version }}"
       - name: Run Static Analysis
         run: |
           poetry run isort django_typer --check
