--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -59,5 +59,5 @@ jobs:
           doc8 --ignore-path build --max-line-length 100
           echo "$(poetry env info --path)/bin" >> $GITHUB_PATH
 
-      - name: Run pyright
-        uses: jakebailey/pyright-action@v2
+      # - name: Run pyright
+      #   uses: jakebailey/pyright-action@v2
