--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,8 +55,8 @@ rich = { version = ">=10.11.0,<14.0.0", optional = true }
 
 shellingham = ">=1.5.4"
 
-# we need this on 3.8 for Annotated types
-typing-extensions = { version = ">=3.7.4.3", python = "<3.9" }
+# we need this on 3.8 for Annotated types and 3.9 for ParamSpec
+typing-extensions = { version = ">=3.7.4.3", markers = "python_version < '3.10'" }
 
 
 [tool.poetry.group.dev.dependencies]
