--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -165,10 +165,10 @@ jobs:
         touch ~/.bashrc
         echo "\n[[ -r "$(brew --prefix)/etc/profile.d/bash_completion.sh" ]] && . "$(brew --prefix)/etc/profile.d/bash_completion.sh" || true" >> ~/.bash_profile
         source ~/.bashrc
-    - name: Install Fish shell
-      run: |
-        brew install sbt
-        brew install fish
+    # - name: Install Fish shell
+    #   run: |
+    #     brew install sbt
+    #     brew install fish
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
