remove bash install on osx

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -158,13 +158,13 @@ jobs:
         chmod -R go-w /usr/local/share/zsh
         source ~/.zshrc
         sudo chsh -s /bin/zsh runner
-    - name: Install Bash Completions
-      shell: bash
-      run: |
-        brew install bash-completion@2
-        touch ~/.bashrc
-        echo "\n[[ -r "$(brew --prefix)/etc/profile.d/bash_completion.sh" ]] && . "$(brew --prefix)/etc/profile.d/bash_completion.sh" || true" >> ~/.bash_profile
-        source ~/.bashrc
+    # - name: Install Bash Completions
+    #   shell: bash
+    #   run: |
+    #     brew install bash-completion@2
+    #     touch ~/.bashrc
+    #     echo "\n[[ -r "$(brew --prefix)/etc/profile.d/bash_completion.sh" ]] && . "$(brew --prefix)/etc/profile.d/bash_completion.sh" || true" >> ~/.bash_profile
+    #     source ~/.bashrc
     # - name: Install Fish shell
     #   run: |
     #     brew install sbt
