add debug workflow

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -45,6 +45,11 @@ jobs:
           poetry run pip install --upgrade pip
           poetry install
           poetry run pip install -U "django~=${{ matrix.django-version }}"
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        with:
+          detached: true
+        timeout-minutes: 60
       - name: Run Static Analysis
         run: |
           source .venv/bin/activate
