--- a/doc/.readthedocs.yaml
+++ b/doc/.readthedocs.yaml
@@ -15,7 +15,7 @@ build:
       - pip install poetry==1.7.1  # 1.8 has a bug preventing this build from working
       - poetry config virtualenvs.create false
     post_install:
-      - poetry install
+      - poetry install -E rich
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
