--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,14 @@
 name: test
 
 on:
-  push: # runs on everything
-  pull_request: # runs on everything
+  push:
+  pull_request:
   workflow_dispatch:
     inputs:
-      debug_enabled:
-        type: boolean
-        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
-        required: false
-        default: false
+      debug:
+        description: 'Set to on, to open ssh debug session.'
+        required: true
+        default: 'off'
 
 jobs:
 
@@ -50,11 +49,16 @@ jobs:
         poetry run pip install --upgrade pip
         poetry install
         poetry run pip install -U "Django~=${{ matrix.django-version }}"
-    # - name: Setup tmate session
-    #   uses: mxschmitt/action-tmate@v3
-    #   with:
-    #     detached: true
-    #   timeout-minutes: 60
+    - name: Install Emacs
+      if: ${{ github.event.inputs.debug == 'on' }}
+      run: |
+        sudo apt install emacs
+    - name: Setup tmate session
+      if: ${{ github.event.inputs.debug == 'on' }}
+      uses: mxschmitt/action-tmate@v3
+      with:
+        detached: true
+      timeout-minutes: 60
     - name: Run Unit Tests
       run: |
         poetry run pip install colorama
@@ -107,6 +111,16 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y fish
+    - name: Install Emacs
+      if: ${{ github.event.inputs.debug == 'on' }}
+      run: |
+        sudo apt install emacs
+    - name: Setup tmate session
+      if: ${{ github.event.inputs.debug == 'on' }}
+      uses: mxschmitt/action-tmate@v3
+      with:
+        detached: true
+      timeout-minutes: 60
     - name: Run Unit Tests
       run: |
         poetry run pytest django_typer/tests/completion_tests.py
@@ -136,7 +150,6 @@ jobs:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
-      if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -169,6 +182,10 @@ jobs:
     #   run: |
     #     brew install sbt
     #     brew install fish
+    - name: Install Emacs
+      if: ${{ github.event.inputs.debug == 'on' }}
+      run: |
+        brew install emacs
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
@@ -181,6 +198,12 @@ jobs:
         poetry run pip install --upgrade pip
         poetry install
         poetry run pip install -U "Django~=${{ matrix.django-version }}"
+    - name: Setup tmate session
+      if: ${{ github.event.inputs.debug == 'on' }}
+      uses: mxschmitt/action-tmate@v3
+      with:
+        detached: true
+      timeout-minutes: 60
     - name: Run Unit Tests
       shell: zsh {0}
       run: |
@@ -245,11 +268,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # - name: Setup tmate session
-      #   uses: mxschmitt/action-tmate@v3
-      #   with:
-      #     detached: true
-      #   timeout-minutes: 15
+      - name: Install Emacs
+        if: ${{ github.event.inputs.debug == 'on' }}
+        run: |
+          sudo apt install emacs
+      - name: Setup tmate session
+        if: ${{ github.event.inputs.debug == 'on' }}
+        uses: mxschmitt/action-tmate@v3
+        with:
+          detached: true
+        timeout-minutes: 60
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
