run tests on a schedule, fix sphinxcontrib-typer dependency

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ on:
         description: 'Set to on, to open ssh debug session.'
         required: true
         default: 'off'
+  schedule:
+    - cron: '0 13 * * *'  # Runs at 6 am pacific every day
 
 jobs:
 
