--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ pylint = "^3.0"
 doc8 = "^1.1.1"
 aiohttp = "^3.9.1"
 readme-renderer = {extras = ["md"], version = ">=42,<44"}
-sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = "^0.2.0"}
+sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = "^0.2.2", markers="python_version > '3.8'"}
 scikit-learn = "^1.0.0"
 pytest-env = "^1.0.0"
 numpy = [
