--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ pylint = "^3.0"
 doc8 = "^1.1.1"
 aiohttp = "^3.9.1"
 readme-renderer = {extras = ["md"], version = ">=42,<44"}
-sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = "^0.2.2", markers="python_version > '3.8'"}
+sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = "^0.2.3", markers="python_version >= '3.9'"}
 scikit-learn = "^1.0.0"
 pytest-env = "^1.0.0"
 numpy = [
@@ -187,7 +187,7 @@ line-length = 88
 exclude = [
     "doc",
     "dist",
-    "django_typer/tests/apps/examples"
+    "examples"
 ]
 
 [tool.ruff.lint]
