--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ pylint = "^3.0"
 doc8 = "^1.1.1"
 aiohttp = "^3.9.1"
 readme-renderer = {extras = ["md"], version = ">=42,<44"}
-sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = "^0.2.3", markers="python_version >= '3.9'"}
+sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = "^0.2.5", markers="python_version >= '3.9'"}
 scikit-learn = "^1.0.0"
 pytest-env = "^1.0.0"
 numpy = [
@@ -89,6 +89,7 @@ pexpect = "^4.9.0"
 pyright = "^1.1.357"
 ruff = "^0.4.1"
 graphviz = "^0.20.3"
+sphinx-tabs = "^3.4.5"
 
 [tool.poetry.extras]
 rich = ["rich"]
