--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
           - '3.2' # LTS April 2024
           - '4.2' # LTS April 2026
           - '5.0' # April 2025
+          - '5.1b1' # December 2025
         exclude:
           - python-version: '3.8'
             django-version: '5.0'
@@ -32,6 +33,10 @@ jobs:
             django-version: '3.2'
           - python-version: '3.12'
             django-version: '3.2'
+          - python-version: '3.8'
+            django-version: '5.1b1'
+          - python-version: '3.9'
+            django-version: '5.1b1'
 
     steps:
     - uses: actions/checkout@v4
