--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,6 +22,7 @@ jobs:
           - '3.2' # LTS April 2024
           - '4.2' # LTS April 2026
           - '5.0' # April 2025
+          - '5.1rc1' # December 2025
         exclude:
           - python-version: '3.8'
             django-version: '4.2'
@@ -35,6 +36,10 @@ jobs:
             django-version: '5.0'
           - python-version: '3.10'
             django-version: '5.0'
+          - python-version: '3.8'
+            django-version: '5.1rc1'
+          - python-version: '3.10'
+            django-version: '5.1rc1'
 
     steps:
       - uses: actions/checkout@v4
