--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,7 +22,7 @@ jobs:
           - '3.2' # LTS April 2024
           - '4.2' # LTS April 2026
           - '5.0' # April 2025
-          - '5.1rc1' # December 2025
+          - '5.1' # December 2025
         exclude:
           - python-version: '3.8'
             django-version: '4.2'
@@ -37,9 +37,9 @@ jobs:
           - python-version: '3.10'
             django-version: '5.0'
           - python-version: '3.8'
-            django-version: '5.1rc1'
+            django-version: '5.1'
           - python-version: '3.10'
-            django-version: '5.1rc1'
+            django-version: '5.1'
 
     steps:
       - uses: actions/checkout@v4
