--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,6 @@ Sphinx = [
 ]
 sphinx-rtd-theme = "^2.0.0"
 mypy = "^1.0"
-pylint = "^3.0"
 doc8 = "^1.1.1"
 aiohttp = "^3.9.1"
 readme-renderer = {extras = ["md"], version = ">=42,<44"}
@@ -85,7 +84,7 @@ scipy = [
     { version = ">=1.11", markers = "python_version > '3.8'" },
     { version = "<=1.10", markers = "python_version <= '3.8'" },
 ]
-django-stubs = "^4.2.7"
+django-stubs = ">=4.2.7"
 pexpect = "^4.9.0"
 pyright = "^1.1.357"
 ruff = "^0.4.1"
