--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,12 +69,18 @@ Sphinx = ">=7.0"
 mypy = ">=1.0"
 doc8 = ">=1.1.1"
 aiohttp = ">=3.9.1"
-readme-renderer = {extras = ["md"], version = ">=42,<44"}
+readme-renderer = {extras = ["md"], version = ">=42"}
 sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = ">=0.5.0", markers="python_version >= '3.9'"}
 scikit-learn = ">=1.0.0"
 pytest-env = ">=1.0.0"
-numpy = ">=1.24"
-scipy = ">=1.0"
+numpy = [
+    { version = ">=1.26", markers = "python_version > '3.8'" },
+    { version = "<=1.24", markers = "python_version <= '3.8'" },
+]
+scipy = [
+    { version = ">=1.11", markers = "python_version > '3.8'" },
+    { version = "<=1.10", markers = "python_version <= '3.8'" },
+]
 django-stubs = ">=4.2.7"
 pexpect = ">=4.9.0"
 pyright = ">=1.1.357"
