--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,10 @@ doc8 = ">=1.1.1"
 aiohttp = ">=3.9.1"
 readme-renderer = {extras = ["md"], version = ">=42"}
 sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = ">=0.5.0", markers="python_version >= '3.9'"}
-scikit-learn = ">=1.0.0"
+scikit-learn = [
+    { version = ">=1.5", markers = "python_version > '3.8'" },
+    { version = ">=1.0", markers = "python_version <= '3.8'" },
+]
 pytest-env = ">=1.0.0"
 numpy = [
     { version = ">=1.26", markers = "python_version > '3.8'" },
