--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,15 @@ typing-extensions = { version = ">=3.7.4.3", markers = "python_version < '3.10'"
 ipdb = ">=0.13.13"
 pytest-django = ">=4.8.0"
 pytest-cov = ">=5.0.0"
-Sphinx = ">=7.0"
+Sphinx = [
+    { version = ">=8.0", markers = "python_version >= '3.10'" },
+    { version = ">=7.4", markers = "python_version >= '3.9'" },
+    { version = ">=7.0", markers = "python_version < '3.9'" }
+]
+docutils = [
+    { version = ">=0.21", markers = "python_version >= '3.9'" },
+    { version = ">=0.20", markers = "python_version < '3.9'" }
+]
 mypy = ">=1.0"
 doc8 = ">=1.1.1"
 aiohttp = ">=3.9.1"
