--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,6 @@ click = "^8.1.0"
 # typer's release history is full of breaking changes for minor versions
 # given the reliance on some of its private internals we peg the typer
 # version very strictly to bug fix releases for specific minor lines.
-typer-slim = ">=0.12.5,<0.13.0"
 
 # this should track typer's rich dependency, so long as our console
 # patches still work - so be sure to test on the low end of the range
@@ -59,13 +58,22 @@ shellingham = ">=1.5.4"
 
 # we need this on 3.8 for Annotated types and 3.9 for ParamSpec
 typing-extensions = { version = ">=3.7.4.3", markers = "python_version < '3.10'" }
+typer = {git = "https://github.com/bckohan/typer.git", rev = "feat/autocompletion"}
 
 
 [tool.poetry.group.dev.dependencies]
 ipdb = ">=0.13.13"
 pytest-django = ">=4.8.0"
 pytest-cov = ">=5.0.0"
-Sphinx = ">=7.0"
+Sphinx = [
+    { version = ">=8.0", markers = "python_version >= '3.10'" },
+    { version = ">=7.4", markers = "python_version >= '3.9'" },
+    { version = ">=7.0", markers = "python_version < '3.9'" }
+]
+docutils = [
+    { version = ">=0.21", markers = "python_version >= '3.9'" },
+    { version = ">=0.20", markers = "python_version < '3.9'" }
+]
 mypy = ">=1.0"
 doc8 = ">=1.1.1"
 aiohttp = ">=3.9.1"
