add CoC update action

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,15 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 
+
+[project.urls]
+Homepage = "https://django-typer.readthedocs.io"
+Documentation = "https://django-typer.readthedocs.io"
+Repository = "https://github.com/bckohan/django-typer"
+Issues = "https://github.com/bckohan/django-typer/issues"
+Changelog = "https://django-typer.readthedocs.io/en/latest/changelog.html"
+Code_of_Conduct = "https://github.com/django-commons/membership/blob/main/CODE_OF_CONDUCT.md"
+
 packages = [
     { include = "django_typer" }
 ]
