--- a/.github/workflows/update_coc.yml
+++ b/.github/workflows/update_coc.yml
@@ -1,6 +1,8 @@
 name: Update Code of Conduct
 
 on:
+    push:
+    pull_request:
     # Run every Sunday at midnight UTC (00:00) - triggered by webhook?
     schedule:
         - cron: '0 0 * * 0'
