--- a/.github/workflows/update_coc.yml
+++ b/.github/workflows/update_coc.yml
@@ -1,16 +1,16 @@
 name: Update Code of Conduct
 
 on:
-    push:
-    pull_request:
+    # push:
+    # pull_request:
     # Run every Sunday at midnight UTC (00:00) - triggered by webhook?
     schedule:
         - cron: '0 0 * * 0'
 
-permissions:
-    contents: write
-    issues: write
-    pull-requests: write
+# permissions:
+#     contents: write
+#     issues: write
+#     pull-requests: write
 
 jobs:
   update_code_of_conduct:
@@ -29,32 +29,22 @@ jobs:
         run: |
           if cmp -s fetched_code_of_conduct.md CODE_OF_CONDUCT.md; then
             echo "No changes in CODE_OF_CONDUCT.md"
-            echo "::set-output name=changed::false"
+            echo "changed=false" >> $GITHUB_OUTPUT
           else
             echo "CODE_OF_CONDUCT.md has changed"
-            echo "::set-output name=changed::true"
+            echo "changed=true" >> $GITHUB_OUTPUT
           fi
 
-      # Step 4: Create a new branch and commit the updated file (if it changed)
-      - name: Create branch and commit changes
-        if: steps.check_changes.outputs.changed == 'true'
-        run: |
-            git config user.name "GitHub Actions Bot"
-            git config user.email "actions@github.com"
-            git checkout -b update-code-of-conduct
-            cp fetched_code_of_conduct.md CODE_OF_CONDUCT.md
-            git add CODE_OF_CONDUCT.md
-            git commit -m "Update CODE_OF_CONDUCT.md"
-            git push origin update-code-of-conduct
-
-      # Step 5: Create a pull request to merge the changes into the main branch
+      # Create a pull request to merge the changes into the main branch
       - name: Create Pull Request
         if: steps.check_changes.outputs.changed == 'true'
         uses: peter-evans/create-pull-request@v7
         with:
             token: ${{ secrets.GITHUB_TOKEN }}
-            branch: update-code-of-conduct
+            branch: update-coc
+            add-paths: |
+                CODE_OF_CONDUCT.md
             title: "Update Code of Conduct"
-            body: "This PR updates the Code of Conduct with the latest version from the django-commons repository."
+            body: "Update the Code of Conduct with the latest version from the django-commons repository."
             base: main
             commit-message: "Update CODE_OF_CONDUCT.md from django-commons"
