--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-[tool.poetry]
+[project]
 name = "django-typer"
 version = "2.2.2"
 description = "Use Typer to define the CLI for your Django management commands."
