--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "django-typer"
 version = "2.2.2"
 description = "Use Typer to define the CLI for your Django management commands."
-authors = ["Brian Kohan <bckohan@gmail.com>"]
+authors = [{name = "Brian Kohan", email = "bckohan@gmail.com"}]
 license = {text = "MIT License"}
 readme = "README.md"
 repository = "https://github.com/bckohan/django-typer"
