update to match django-tasks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,8 @@
-[project]
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
 name = "django-typer"
 version = "2.2.2"
 description = "Use Typer to define the CLI for your Django management commands."
@@ -41,13 +45,13 @@ classifiers = [
 ]
 
 
-[project.urls]
-Homepage = "https://django-typer.readthedocs.io"
-Documentation = "https://django-typer.readthedocs.io"
-Repository = "https://github.com/bckohan/django-typer"
-Issues = "https://github.com/bckohan/django-typer/issues"
-Changelog = "https://django-typer.readthedocs.io/en/latest/changelog.html"
-Code_of_Conduct = "https://github.com/django-commons/membership/blob/main/CODE_OF_CONDUCT.md"
+[tool.poetry.urls]
+"Homepage" = "https://django-typer.readthedocs.io"
+"Documentation" = "https://django-typer.readthedocs.io"
+"Repository" = "https://github.com/bckohan/django-typer"
+"Issues" = "https://github.com/bckohan/django-typer/issues"
+"Changelog" = "https://django-typer.readthedocs.io/en/latest/changelog.html"
+"Code_of_Conduct" = "https://github.com/django-commons/membership/blob/main/CODE_OF_CONDUCT.md"
 
 
 [tool.poetry.dependencies]
