update authors and license

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ build-backend = "poetry.core.masonry.api"
 name = "django-typer"
 version = "2.2.2"
 description = "Use Typer to define the CLI for your Django management commands."
-authors = [{name = "Brian Kohan", email = "bckohan@gmail.com"}]
-license = {text = "MIT License"}
+authors = [
+    "Brian Kohan <bckohan@gmail.com>",
+]
+license = "MIT"
 readme = "README.md"
 repository = "https://github.com/bckohan/django-typer"
 homepage = "https://django-typer.readthedocs.io"
