drop python 3.8 - fix #130

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,23 +19,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
         django-version:
           - '3.2' # LTS April 2024
           - '4.2' # LTS April 2026
           - '5.0' # April 2025
           - '5.1' # December 2025
         exclude:
-          - python-version: '3.8'
-            django-version: '5.0'
           - python-version: '3.9'
             django-version: '5.0'
           - python-version: '3.11'
             django-version: '3.2'
           - python-version: '3.12'
             django-version: '3.2'
-          - python-version: '3.8'
-            django-version: '5.1'
           - python-version: '3.9'
             django-version: '5.1'
           - python-version: '3.13'
@@ -93,12 +89,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.13']
+        python-version: ['3.9', '3.13']
         django-version:
           - '3.2' # LTS April 2024
           - '5.1' # December 2025
         exclude:
-          - python-version: '3.8'
+          - python-version: '3.9'
             django-version: '5.1'
           - python-version: '3.13'
             django-version: '3.2'
@@ -150,12 +146,12 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.13']
+        python-version: ['3.9', '3.13']
         django-version:
           - '3.2' # LTS April 2024
           - '5.1' # December 2025
         exclude:
-          - python-version: '3.8'
+          - python-version: '3.9'
             django-version: '5.1'
           - python-version: '3.13'
             django-version: '3.2'
@@ -234,12 +230,12 @@ jobs:
   #   runs-on: windows-latest
   #   strategy:
   #     matrix:
-  #       python-version: ['3.8', '3.13']
+  #       python-version: ['3.9', '3.13']
   #       django-version:
   #         - '3.2' # LTS April 2024
   #         - '5.0' # April 2025
   #       exclude:
-  #         - python-version: '3.8'
+  #         - python-version: '3.9'
   #           django-version: '5.0'
   #         - python-version: '3.13'
   #           django-version: '3.2'
