--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,28 @@
 
 name: Publish to PyPI
 
-on: push
-
+on:
+  push:
+    tags:
+      - 'v*'  # only publish on version tags (e.g. v1.0.0)
+  workflow_dispatch:
+    inputs:
+      pypi:
+        description: 'Publish to PyPi'
+        required: true
+        default: false
+        type: boolean
+      github:
+        description: 'Publish a GitHub Release'
+        required: true
+        default: false
+        type: boolean
+      testpypi:
+        description: 'Publish to TestPyPi'
+        required: true
+        default: true
+        type: boolean
+  
 env:
   PYPI_URL: https://pypi.org/p/django-typer
   PYPI_TEST_URL: https://test.pypi.org/project/django-typer
@@ -38,6 +58,8 @@ jobs:
   publish-to-pypi:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
+    if: startsWith(github.ref, 'refs/tags/')  # only publish on tag pushes
+    #if: ${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.pypi == 'true') || github.event_name != 'workflow_dispatch' }}
     needs:
     - build
     runs-on: ubuntu-latest
@@ -59,6 +81,7 @@ jobs:
     name: >-
       Sign the Python 🐍 distribution 📦 with Sigstore
       and upload them to GitHub Release
+    if: ${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.github == 'true') || github.event_name != 'workflow_dispatch' }}
     needs:
     - publish-to-pypi
     runs-on: ubuntu-latest
@@ -100,6 +123,7 @@ jobs:
 
   publish-to-testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
+    if: ${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.testpypi == 'true') || github.event_name != 'workflow_dispatch' }}
     needs:
     - build
     runs-on: ubuntu-latest
