--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ ruff = ">=0.4.1"
 graphviz = ">=0.20.3"
 sphinx-tabs = ">=3.4.5"
 furo = ">=2024.7.18"
+pluggy = "^1.5.0"
 
 [tool.poetry.extras]
 rich = ["rich"]
