--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 Django = ">=3.2,<6.0"
-click = "^8.1.0"
+click = ">=8.1.0"
 
 # typer's release history is full of breaking changes for minor versions
 # given the reliance on some of its private internals we peg the typer
@@ -101,7 +101,7 @@ ruff = ">=0.4.1"
 graphviz = ">=0.20.3"
 sphinx-tabs = ">=3.4.5"
 furo = ">=2024.7.18"
-pluggy = "^1.5.0"
+pluggy = ">=1.5.0"
 
 [tool.poetry.extras]
 rich = ["rich"]
